# ebook-risk-analyzer

./: .gitignore  LICENSE  README.md  WINDOWS-QUICKSTART.txt  pyproject.toml
.github/workflows/: windows-build.yml
config/: default_rules.yaml
ebook_risk_analyzer/: __init__.py  __main__.py  analyzer.py  cli.py  epub_parser.py  html_parser.py  models.py  report_generator.py  scoring.py  text_normalizer.py  web_app.py  web_launcher.py
ebook_risk_analyzer/detectors/: __init__.py  chatbot_residue.py  citations.py  consistency.py  images.py  metadata.py  repetition.py  structure.py  style_patterns.py
ebook_risk_analyzer/static/: report.css  report.js  web.css  web.js
ebook_risk_analyzer/templates/: report.html  web_index.html  web_result.html
examples/sample_book/: chapter1.html  chapter2.html  references.html
packaging/: README-WINDOWS.md  build-windows.ps1  ebook-risk-analyzer.spec  windows-installer.iss  windows_entry.py
tests/: conftest.py  test_chatbot_residue.py  test_cli.py  test_consistency_images_metadata.py  test_determinism.py  test_epub_parser.py  test_html_parser.py  test_repetition.py  test_report.py  test_scoring.py  test_structure_citations.py  test_web_app.py
